@@ -1,1 +1,2 @@
 A: Extended customer title pattern. https://bgerp.org/change/0/doc/kernel/customer.html#setup-title-pattern
+A: House parameters in address format. https://bgerp.org/change/0/doc/kernel/setup.html#config-param-address
